samples/_failures_safe/1761493988_15edf9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_222a965f.c: In function ‘main’:
./samples/SAFE/__tmp_222a965f.c:173:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  173 |     Token* tokens
      |     ^~~~~
./samples/SAFE/__tmp_222a965f.c:173:5: error: expected declaration or statement at end of input
